Bug 313003 - Copy/Move to collection doesn't pick up tags and appends .MetaProxy::Track to each output filename
Summary: Copy/Move to collection doesn't pick up tags and appends .MetaProxy::Track to...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: File Browser (other bugs)
Version First Reported In: 2.6-git
Platform: Debian unstable Linux
: NOR major
Target Milestone: 2.7
Assignee: Amarok Bugs
URL: http://i.imgur.com/0Fwcj.png
Keywords: regression, release_blocker
Depends on:
Blocks:
 
Reported: 2013-01-10 10:09 UTC by Thierry Göckel
Modified: 2013-01-12 11:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thierry Göckel 2013-01-10 10:09:47 UTC
On most folders and files I try to use 'copy to collection' (with advanced output options) with, the problem described in the summary and shown in the screenshot happens. It doesn't happen with files actually already _in_ the collection.

Cheers!

Reproducible: Always

Steps to Reproduce:
1. Go (inside Amarok) to some folder outside the collection and check if tags are in fact valid
2. Choose Copy to collection from Context Menu
3. Take a look at preview
Actual Results:  
See screenshot.

Expected Results:  
Paths generated from files' tags.

git describe: v2.6.90-79-g852a71c
Comment 1 Matěj Laitl 2013-01-10 10:16:11 UTC
Oh, my bad, this seems to be a bug that I introduced. Lemme have a look at it and thanks for testing current git and reporting back.
Comment 2 Matěj Laitl 2013-01-11 16:38:41 UTC
Git commit d8aa75f0f5ba607c7db14a5b1ddea6c17beeb966 by Matěj Laitl.
Committed on 11/01/2013 at 17:33.
Pushed by laitl into branch 'master'.

DirectoryLoader, FileView: fix broken Copy/Move to collection

I accidentally broke this in commit 7f1f9f606ad1af5b3d1.

This doesn't go into ChangeLog, because the bug was introduced after
2.7 Beta was released. Thierry, please test that this commit fixes
your problem.
FIXED-IN: 2.7

M  +17   -4    src/DirectoryLoader.cpp
M  +13   -1    src/DirectoryLoader.h
M  +4    -2    src/browsers/filebrowser/FileView.cpp

http://commits.kde.org/amarok/d8aa75f0f5ba607c7db14a5b1ddea6c17beeb966
Comment 3 Thierry Göckel 2013-01-12 11:26:45 UTC
Thanks Matěj, it's working great again!

Cheers