DirectoryLoader, FileView: fix broken Copy/Move to collection

I accidentally broke this in commit 7f1f9f606ad1af5b3d1.

This doesn't go into ChangeLog, because the bug was introduced after
2.7 Beta was released. Thierry, please test that this commit fixes
your problem.

BUG: 313003
FIXED-IN: 2.7